compiler/tests/success/common/bug_729.jazz
export fn id(reg u32 x) -> reg u32 { x = x; return x; }

export
fn whynot(reg u32 a) -> reg u32 {
  a = id(a);
  return a;
}
