compiler/tests/fail/register_allocation/arm-m4/too_many_large_ret.jazz
export
fn too_many_large_ret() -> reg u64 {
  reg u64 x;
  x = 0;
  return x;
}
